kubernetes/apps/kubeflow/metadata/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metadata
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - kubeflow.goyangi.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ml_metadata
      backendRefs:
        - name: metadata-envoy
          port: 9090
